--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
             <a href="#features" class="hover:text-green-500">Feature</a>
             <a href="#report" class="hover:text-green-500">Report</a>
             <a
-              href="#"
+              href="login.html"
               class="flex items-center text-white hover:text-green-600 bg-green-500 rounded-[20px] px-4 py-1 transition duration-300"
             >
               <svg
@@ -135,7 +135,7 @@
       <a href="#features" class="text-slate-50 hover:underline py-2">Feature</a>
       <a href="#report" class="text-slate-50 hover:underline py-2">Report</a>
       <a
-        href="#"
+        href="login.html"
         class="flex items-center text-white bg-green-500 hover:text-green-600 rounded-[20px] px-4 py-2 my-1 transition duration-300"
       >
         <svg
