--- a/src/admin.html
+++ b/src/admin.html
@@ -186,8 +186,8 @@
             <tbody class="text-sm text-black">
               <tr class="odd:bg-gray-100">
                 <td class="p-2">Class A</td>
-                <td class="p-2">Jl. Raya Sukabumi, Perumahan Bumi 2</td>
-                <td class="p-2">Class 8</td>
+                <td class="p-2">Batu Ajo, Sekupang perum tiban 3</td>
+                <td class="p-2">Class A</td>
                 <td class="p-2">Male</td>
                 <td class="p-2">Student</td>
                 <td class="p-2">
@@ -198,8 +198,8 @@
               </tr>
               <tr class="odd:bg-gray-100">
                 <td class="p-2">Class B</td>
-                <td class="p-2">Titon, Sukabumi, Perumahan Cipta Garden</td>
-                <td class="p-2">Class 8</td>
+                <td class="p-2">Tiban, Sekupang, Perumahan Cipta Garden</td>
+                <td class="p-2">Class B</td>
                 <td class="p-2">Male</td>
                 <td class="p-2">Student</td>
                 <td class="p-2">
